
syntax = "proto3";

import "Server/proto/common/common.proto";

package pay;

service Pay {
    rpc WxPay(WxPayRequest) returns (WxPayReply) {}
    rpc WxPayCB(WxPayCBRequest) returns (common.CommReply) {}
}

message WxPayRequest {
    common.Head head = 1;
    int64 type = 2;
    int64 item = 3;
    int64 tuid = 4;
    int64 fee = 5;
    string openid = 6;
    string callback = 7;
    string clientip = 8;
}

message WxPayReply {
    common.Head head = 1;
    string paySign = 2;
    string package = 3;
    string nonceStr = 4;
    int64 timeStamp = 5;
    string signType = 6;
}

message WxPayCBRequest {
    common.Head head = 1;
    string oid = 2;
    int64 fee = 3;
}
